...
        HStack(spacing: 16) {
            if self.menu != nil {
                MenuButtonView(menuActions: self.menu!.menuActions)
            }
            
            ZStack(alignment: .bottomTrailing) {
                TextView(Bundle.cai.localizedString(forKey: "Write a message", value: "Ask me please", table: nil), text: self.$value, textViewHeight: self.$textViewHeight) {
                    self.postMessage()
                }
                .frame(height: textViewHeight)
                
                Button(action: {
                    self.postMessage()
                    
                }, label: {
                    Image(systemName: self.themeManager.value(for: .sendButton, type: String.self, defaultValue: "arrow.up.square.fill"))
                        .resizable()
                        .frame(width: 28, height: 28)
                        .padding([.bottom, .trailing], 5)
                })
                    .disabled(self.value.isEmpty)
            }
...
