...
            if self.selectedChannelSelection == ChannelSelection.token {
                NavigationLink(destination: NavigationLazyView(AssistantView()
                        .navigationBarTitle(Text(self.liveConnection.channelSlug), displayMode: .inline)
                        .environmentObject(self.dataModel.getModelFor(self.liveConnection))
                        .environmentObject(ThemeManager.shared)
                )) {
                    Text("Connect")
                }
            } else {
                connectButtonForChannelList()
            }
        } else {
            if self.selectedViewRepresentation == ViewRepresentation.fullscreen {
...
